Fixed shrinking problem of nav search bar in dark mode

--- a/app/styles/modes.scss
+++ b/app/styles/modes.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import "bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
 #mode-options {
   display: inline-block;
@@ -128,5 +129,14 @@
   }
   .brand:hover {
     color: $mode-color;
+  }
+  .navbar-form .form-control {
+    width: 300px;
+    @media (min-width: $screen-sm-min) {
+      width: 350px;
+    }
+    @media (min-width: $screen-lg-min) {
+      width: 500px;
+    }
   }
 }
